package org.unicolombo.concesionario.Dominio.Modelos;

public class Automoviles extends Vehiculos {

    public Automoviles(String marca, String modelo, String placa, String cilindrado,double precio,String distribuidor) {
        super(marca, modelo, placa, cilindrado,precio,distribuidor);
    }

    public void sonidoMotor(){

    }

}
